[package]
name = "jason-minigrep"
version = "0.1.0"
authors = ["JasonLv lv-wei@foxmail.com"]
edition = "2018"
description = "A fun game where you guess what number the computer has chosen."
license = "MIT OR Apache-2.0"
#documentation = "https://docs.rs/bitflags"
#homepage = "https://serde.rs/"
#repository = "https://github.com/rust-lang/cargo/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3